Fix nav flicker
TO DO: find out why start.html won’t turn active

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -120,8 +120,9 @@ sup {
 	margin-bottom: 15px;
 }
 
-#sidebar ul li.headline a:hover {
+#sidebar ul li.headline a:hover, #sidebar ul li.headline a:active {
 	color: #fff;
+	opacity: 1;
 }
 
 #sidebar ul li.headline a.active {
